Inizio implementazione interfaccia

--- a/templates/pagina_test/index.html.twig
+++ b/templates/pagina_test/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PaginaTestController!{% endblock %}
+{% block title %}Module Manager!{% endblock %}
 
 {% block body %}
 <style>
@@ -9,12 +9,7 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/ubyl/module_manager/src/Controller/PaginaTestController.php'|file_link(0) }}">src/Controller/PaginaTestController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/ubyl/module_manager/templates/pagina_test/index.html.twig'|file_link(0) }}">templates/pagina_test/index.html.twig</a></code></li>
-    </ul>
+    <h1>Module manager! </h1>
+    
 </div>
 {% endblock %}
