--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
         {% endblock %}
     </head>
     <body>
+        <div class = "container-fluid container-lg">
         {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
