--- a/templates/braden/index.html.twig
+++ b/templates/braden/index.html.twig
@@ -117,10 +117,13 @@
         </h2>
         <div id="panelsStayOpen-collapse3" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-heading3">
         <div class="accordion-body">
-            <strong>4</strong> 
-            <strong>3</strong> 
-            <strong>2</strong> 
-            <strong>1</strong> 
+            <strong>4-Cammina Frequentemente</strong> Cammina al di fuori della camera almeno due volte al giorno e dentro la camera
+            1 volta ogni due ore (al di fuori delle ore del riposo).
+            <strong>3-Cammina Occasionalmente</strong> Cammina occasionalmente durante il giorno ma per brevi distanze con o senza
+            aiuto. Trascorre la maggior parte di ogni turno a letto o sulla sedia.
+            <strong>2-In Poltrona</strong> Capacità di camminare severamente limitata o inesistente. Non mantiene la posizione 
+            eretta e/o deve essere assistito nello spostamento sulla sedia o sulla sedia a rotelle.
+            <strong>1-Completamente Allettato</strong> Costretto a letto.
         </div>
         </div>
     </div>
@@ -152,10 +155,11 @@
         </h2>
         <div id="panelsStayOpen-collapse4" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-heading4">
         <div class="accordion-body">
-            <strong>4</strong> 
-            <strong>3</strong> 
-            <strong>2</strong> 
-            <strong>1</strong> 
+            <strong>4-Limitazioni assenti</strong> Si sposta frequentemente e senza assistenza.
+            <strong>3-Parzialmente limitata</strong> Cambia frequentemente la posizione con minimi spostamenti del corpo.
+            <strong>2-Molto limitata</strong> Cambia occasionalmente posizione del corpo o delle estremità, ma è incapace di fare
+            frequenti o significativi cambiamenti di posizione senza aiuto.
+            <strong>1-Completamente immobile</strong> Non può fare alcun cambiamento di posizione senza assistenza.
         </div>
         </div>
     </div>
@@ -187,10 +191,17 @@
         </h2>
         <div id="panelsStayOpen-collapse5" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-heading5">
         <div class="accordion-body">
-            <strong>4</strong> 
-            <strong>3</strong> 
-            <strong>2</strong> 
-            <strong>1</strong> 
+            <strong>4-Eccellente</strong> Mangia la maggior parte del cibo. Non rifiuta mai un pasto.Talvolta mangia tra i pasti.
+            Non necessita di integratori.
+            <strong>3-Adeguata</strong> a:Mangia più della metà dei pasti, 4 porzioni o più di proteine al giorno. Usualmente assume
+            integratori.
+            b: Si alimenta artificialmente con TPN, assumendo il quantitativo nutrizionale necessario.
+            <strong>2-Probabilmente inadeguata</strong> a:Raramente mangia un pasto completo, generalmente mangia la metà dei cibi 
+            offerti. Le proteine assunte includono 3 porzioni di carne o latticini al giorno, occasionalmente integratori alimentari.
+            b: Riceve meno quantità ottimale di dieta liquida o entrale (con sondino).
+            <strong>1-Molto povera</strong> a: Non mangia mai un pasto completo. Raramente mangia più di 1/3 di qualsiasi cibo offerto.
+            2 o meno porzioni di proteine al giorno. Assume pochi liquidi e nessun integratore.
+            b: E' a digiuno o mantenuto con fleboclisi o beve bevande per più di 5 giorni.
         </div>
         </div>
     </div>
@@ -221,9 +232,13 @@
         </h2>
         <div id="panelsStayOpen-collapse6" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-heading6">
         <div class="accordion-body">
-            <strong>3</strong> 
-            <strong>2</strong> 
-            <strong>1</strong> 
+            <strong>3-Senza problemi apparenti</strong> Si sposta nel letto o sulla sedia in modo autonomo ed ha sufficiente forza
+            muscolare per sollevarsi completamente durante i movimenti.
+            <strong>2-Problema potenziale</strong> Si muove poco o necessita di assistenza minima. Durante lo spostamento la cute 
+            fa attrito con le lenzuola o con il piano della poltrona, occasionalmente può slittare.
+            <strong>1-Problema</strong> Richiede da una moderata ad una massima assistenza nei movimenti. Frequentemente scivola 
+            nel letto o nella poltrona. Frequentemente richiede riposizionamenti con la massima assistenza. Sono presenti spasticità,
+            contratture, agitazione, che causano costante attrito contro il lano del letto o della poltrona.
         </div>
         </div>
     </div>
@@ -238,6 +253,17 @@
       <option value="due">2</option>
       <option value="uno">1</option>
     </select>
+  </div>
+</div>
+
+<div class="form-floating">
+    <h4>Totale </h4>
+</div>
+
+<div class="col-lg-6 col-12">
+  <div class="mb-3">
+    <label for="exampleFormControlTextarea1" class="form-label"></label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
   </div>
 </div>
 
